--- a/style.css
+++ b/style.css
@@ -155,13 +155,24 @@ nav{
     z-index:3;
 }
 
+
 nav h2{
     display:none;
 }
+
 header{
     background: linear-gradient(to right, #2104d9, black);
     padding: 20px;
     color:#ffffff;
+    position: relative;
+    top: 50px;
+}
+header h1{
+    font-weight: bold;
+    padding:5px;
+}
+header p{
+    padding:10px;
 }
 
 
@@ -171,9 +182,9 @@ header{
     line-height: 2em;
 }
 #trending h2{
-    padding-top: 40px;
+    padding-top: 80px;
     padding-left: 40px;
-    padding-bottom:8px;
+ 
 }
 
 .scroll{
@@ -211,7 +222,7 @@ audio{
     left:5px;
     opacity: 75%;
 }
-.more{
+.more, .all, .curated {
     text-decoration: none;
     background-color: #590242;
     color: #ffffff;
@@ -235,6 +246,36 @@ audio{
 #trending ::-webkit-scrollbar-thumb:hover {
     background-color: #020659;
 }
+#playlists h2{
+    color: #590242;
+    padding-left: 40px;
+    padding-bottom:8px;
+
+}
+.scrolltwo{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    overflow-x: auto;
+    overflow-y: hidden;
+    background-color: #2699fb;
+}
+.scrolltwo div{
+    margin:10px;
+    position:relative;
+    background: #0d8dfb;
+    padding:10px;
+}
+.scrolltwo h3{
+    color: #ffffff;
+    text-align: center;
+    padding: 5px;
+}
+.scrolltwo p{
+    color: #ffffff;
+    text-align: center;
+    padding:10px;
+}
+
 #playlists ::-webkit-scrollbar, #curated ::-webkit-scrollbar {
     width: 15px;
 }
@@ -246,23 +287,82 @@ audio{
     border-radius: 5px;
 }   
 #playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
-    background: #ffffff;
+    background:#0d8dfb;
+}
+
+#curated h2{
+    color: #590242;
+    padding-left: 40px;
+    padding-bottom:8px;
+}
+
+.scrollthree {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    overflow-x: auto;
+    overflow-y: hidden;
+    background-color:#030a8c;
+}
+.scrollthree div{
+    margin:10px;
+    position:relative;
+    background:#020659;
+    padding:10px;
+}
+.scrollthree h3{
+    color: #ffffff;
+    text-align: center;
+    padding: 5px;
+}
+.scrollthree p {
+    color: #ffffff;
+    text-align: center;
+    padding:10px;
+}
+
+footer p{
+    color: #590242;
+    text-align: center;
 }
 
 
 
 
-
-
-
-
-
-
-@media (min-width:834px){
+ 
+@media (min-width:834px) {
     body{
         width: 75%;
     }
     nav{
-        width: 75%;
+        width:75%; 
+        display:flex;
+        
     }
+    nav a {
+        color: #ffffff;
+        text-decoration: none;
+        text-transform: uppercase;   
+    }
+   
+}
+@media (min-width:834px) {
+   .scrolltwo{
+    display: grid;
+    grid-template-rows: repeat(5,1fr);
+    overflow-x: hidden;
+    overflow-y:auto;
+    background-color: #2699fb;
+    max-width: 50%;
+    max-height:500px;
+   }
+
+  .scrollthree{
+    display: grid;
+    grid-template-rows: repeat(5,1fr);
+    overflow-x: hidden;
+    overflow-y:auto;
+    background-color:#030a8c;
+    max-width: 50%;
+    max-height:500px;
+   }
 }
