--- a/style.css
+++ b/style.css
@@ -164,7 +164,6 @@ nav{
     font-weight: bold;
 }
 
-
 nav h2{
     display:none;
 }
@@ -231,6 +230,8 @@ audio{
     left:5px;
     opacity: 75%;
 }
+
+
 .more, .all, .curated {
     text-decoration: none;
     background-color: #590242;
@@ -364,14 +365,22 @@ footer p{
    
 }
 @media (min-width:834px) {
-    #allplaylists{
-        display:grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 3fr 1fr;
+    nav{
+        width:75%;
     }
+    ul{
+        width: 100%;
+        text-align:center;
+        padding-top:10px;
+    }
+    .title{
+        text-align: left;
+        position:absolute;
+        top:0;
+        left:0
+    }
+
    .scrolltwo{
-    grid-column: 1 / 2;
-    grid-row: 2 /3;
     display: grid;
     grid-template-rows: repeat(5,1fr);
     overflow-x: hidden;
@@ -382,8 +391,6 @@ footer p{
    }
 
   .scrollthree{
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
     display: grid;
     grid-template-rows: repeat(5,1fr);
     overflow-x: hidden;
