--- a/style.css
+++ b/style.css
@@ -373,23 +373,13 @@ footer p{
         left: 5px;
     }
 
-   .scrolltwo{
-    display: grid;
-    grid-template-rows: repeat(5,1fr);
-    overflow-x: hidden;
-    overflow-y:auto;
-    background-color: #2699fb;
-    max-width: 50%;
-    max-height:500px;
-   }
-
-  .scrollthree{
-    display: grid;
-    grid-template-rows: repeat(5,1fr);
-    overflow-x: hidden;
-    overflow-y:auto;
-    background-color:#030a8c;
-    max-width: 50%;
-    max-height:500px;
-   }
+    .scrolltwo{
+        display:grid;
+        grid-template-rows: repeat(5,1fr);
+        grid-template-columns: 1fr;
+        max-height: 500px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        max-width:50%
+    }
 }
