--- a/style.css
+++ b/style.css
@@ -126,7 +126,6 @@ body {
     width: 375px;
     margin: 0 auto;
     background-color: #ffffff;
-    display: center;
 }
 
 h1{
@@ -372,6 +371,25 @@ footer p{
         position: absolute;
         left: 5px;
     }
+    .scrolltwo div{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+    }
+
+    .scrolltwo h3{
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .scrolltwo p{
+        grid-column: 2 / 3;
+        grid-row: 2 /3;
+            
+    }
+    .scrolltwo img {
+        grid-column: 1 / 2;
+        grid-row:1/3;
+    }
 
     .scrolltwo{
         display:grid;
@@ -380,6 +398,39 @@ footer p{
         max-height: 500px;
         overflow-y: auto;
         overflow-x: hidden;
-        max-width:50%
+        max-width:50%;
+        
+      
     }
+  
+    .scrollthree{
+        display:grid;
+        grid-template-rows: repeat(5,1fr);
+        grid-template-columns: 1fr;
+        max-height: 500px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        max-width:50%;
+    
+    }
+    .scrollthree div{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows:auto auto;
+    }
+
+    .scrollthree h3{
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .scrollthree p{
+        grid-column: 2 / 3;
+        grid-row: 2 /3;
+            
+    }
+    .scrollthree img {
+        grid-column: 1 / 2;
+        grid-row:1/3;
+    }
+
 }
