--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ footer p{
  
 @media (min-width:834px) {
     body{
-        width: 75%;
+        width: 834px;
     }
     nav a{
         color: #ffffff;
@@ -359,7 +359,7 @@ footer p{
         text-transform: uppercase; 
     }
     nav{
-        width:75%;
+        width:834px;
     }
     ul{
         width: 100%;    
@@ -398,11 +398,8 @@ footer p{
         max-height: 500px;
         overflow-y: auto;
         overflow-x: hidden;
-        max-width:50%;
         
-      
     }
-  
     .scrollthree{
         display:grid;
         grid-template-rows: repeat(5,1fr);
@@ -410,9 +407,9 @@ footer p{
         max-height: 500px;
         overflow-y: auto;
         overflow-x: hidden;
-        max-width:50%;
-    
+        max-width: 417px;
     }
+
     .scrollthree div{
         display:grid;
         grid-template-columns: 1fr 1fr;
@@ -432,5 +429,6 @@ footer p{
         grid-column: 1 / 2;
         grid-row:1/3;
     }
+
 
 }
