--- a/style.css
+++ b/style.css
@@ -398,6 +398,7 @@ footer p{
         max-height: 500px;
         overflow-y: auto;
         overflow-x: hidden;
+        max-width:417px;
         
     }
     .scrollthree{
