--- a/style.css
+++ b/style.css
@@ -399,6 +399,7 @@ footer p{
         overflow-y: auto;
         overflow-x: hidden;
         max-width:417px;
+       
         
     }
     .scrollthree{
@@ -416,6 +417,7 @@ footer p{
         grid-template-columns: 1fr 1fr;
         grid-template-rows:auto auto;
     }
+    
 
     .scrollthree h3{
         grid-column: 2 / 3;
@@ -430,6 +432,23 @@ footer p{
         grid-column: 1 / 2;
         grid-row:1/3;
     }
-
-
+    #playlists{
+        width:417px;
+        float:left
+    }
+    #curated{
+        width: 417px;
+        float:left;
+    }
+    .all{
+        float:right;
+        margin:10px;
+    }
+    .curated{
+        float:right;
+        margin:10px;
+    }
+    footer{
+        clear:both;
+    }
 }
